[Cards][Tables] Card based tables now have an overflow scroll on the x axis to prevent content from exceeding the container. #PR Z Resolves #4

--- a/src/scss/components/_cards.scss
+++ b/src/scss/components/_cards.scss
@@ -50,6 +50,7 @@
                     padding: 0 0 .8rem;
                     text-transform: uppercase;
                     letter-spacing: 0.125rem;
+                    overflow-x: scroll;
                 }
             }
 
